hphp/hack/test/typecheck/shapes_cc_2.php.exp
File "shapes_cc_2.php", line 22, characters 6-7:
No class constant 'X3' in X (Typing[4090])
File "shapes_cc_2.php", line 14, characters 7-7:
Declaration of X is here
